:wrench: JPA 환경 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=1234
 #server.port=8080
 loogging.lever.org.springframework=info
 loogging.lever.org.zerock=debug
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true 
+
